feat : web ignoring logging